--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@ ul {
   margin: 0;
 }
 
-.ngx-select__toggle{
+.ngx-select__toggle {
+  border-radius: 0;
+}
+
+.ngx-select_multiple {
   border-radius: 0;
 }
